# android_touch

./: CMakeLists.txt  README.md
include/touch/: touch.h
include/touch_tools/: touch_tools.h
src/: main.c
src/touch/: touch.c
src/touch_tools/: touch_tools.c
